# Tensorwerk

./: .gitignore  LICENSE  Makefile  README.md  README_EN.md  README_PT.md  build_errors.txt
.github/workflows/: ci.yml
data/raw/: README.md
data/schemas/: market_data.json
docker/: production.Dockerfile
docs/: ARCHITECTURE.MD  DECISIONS.MD  MIGRATION.MD  RUN.MD  STRUCTURE.MD
scripts/: setup.sh
src/cognitive-lab/: requirements.txt  server.py
src/cognitive-lab/differential_nets/: neural_sde.py
src/cognitive-lab/models/: README.md
src/cognitive-lab/notebooks/: exploration.ipynb
src/cognitive-lab/topology/: persistent_homology.py
src/interface/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
src/interface/hooks/: useWebSocket.ts
src/interface/public/: index.html
src/interface/src/app/: globals.css  layout.tsx  page.tsx
src/interface/src/app/about/: page.tsx
src/interface/src/app/simulation/: page.tsx
src/interface/src/components/: RetroDashboard.tsx  RiemannManifoldViewer.tsx  TensorwerkLanding.tsx
src/interface/src/shaders/: curvature.glsl
src/nervous-system/: Cargo.toml  Makefile
src/nervous-system/src/: lib.rs
src/nervous-system/src/bridge/: ffi.rs
src/nervous-system/src/ingestion/: main.rs  zero_copy.rs
src/nervous-system/src/validation/: integrity.rs
src/nervous-system/tests/: integration_test.rs
src/physics-engine/: CMakeLists.txt  Makefile
src/physics-engine/asm/: avx512_kernels.asm
src/physics-engine/cuda/: riemann_kernels.cu
src/physics-engine/include/: riemann_manifold.hpp
src/physics-engine/src/: main.cpp
src/physics-engine/src/geometry/: riemann_manifold.cpp
src/physics-engine/src/solvers/: rk4.cpp  rk4.hpp
src/physics-engine/src/tensor/: algebra.cpp  algebra.hpp
src/physics-engine/tests/: unit_test.cpp
src/symbolic-logic/: logic.asd
src/symbolic-logic/axioms/: invariantes.lisp
src/symbolic-logic/compiler/emitters/: cpp-emitter.lisp
src/symbolic-logic/compiler/optimizers/: symbolic-reducer.lisp
src/symbolic-logic/derivation/: field-equations.lisp
